# BattleShipMultiplayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
BattleShipMultiplayer/: BattleShipMultiplayer.cpp  BattleShipMultiplayer.h  CMakeLists.txt
Libs/: sfml-main-d.lib
SFML/SFML-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
SFML/SFML-build/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
SFML/SFML-build/src/SFML/Audio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  sfml-audio.vcxproj  sfml-audio.vcxproj.filters
SFML/SFML-build/src/SFML/Graphics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  sfml-graphics.vcxproj  sfml-graphics.vcxproj.filters
SFML/SFML-build/src/SFML/Main/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  sfml-main.vcxproj  sfml-main.vcxproj.filters
SFML/SFML-build/src/SFML/Network/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  sfml-network.vcxproj  sfml-network.vcxproj.filters
SFML/SFML-build/src/SFML/System/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  (+4 more)
(+7 files in other folders)
